update migration automatic

--- a/OrderAndShippingAPI.Api/appsettings.json
+++ b/OrderAndShippingAPI.Api/appsettings.json
@@ -2,7 +2,7 @@
   "AppSettings": {
     "TokenPasswordKey": "orderandshipping-tokenkey"
   },
-  "ConnectionStrings": { "LokalDB": "Server=DESKTOP-BSDG0CD;Database=OrderAndShipping;Trusted_Connection=True;MultipleActiveResultSets=True;" },
+  "ConnectionStrings": { "LokalDB": "Server=.;Database=OrderAndShipping;Trusted_Connection=True;MultipleActiveResultSets=True;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
